@@ -80,7 +80,7 @@ The following classes and functions are available:
 
     bf(FBB::CSV): Objects of this class allow easy handling of comma-separated
     values.nl()  
-    Manpage(cidr)
+    Manpage(csv)
 
     bf(FBB::DateTime): Manipulations with date and time values.nl()
     Manpage(datetime)
@@ -466,7 +466,7 @@ categories are offered:
 
     bf(FBB::CSV): Objects of this class allow easy handling of comma-separated
     values.nl()  
-    Manpage(cidr)
+    Manpage(csv)
 
     bf(FBB::IBase64Stream): stream implementing base64 encoding and decoding,
     using a tt(FBB::Base64Streambuf) stream buffer.nl() 
@@ -856,7 +856,7 @@ categories are offered:
 
     bf(FBB::CSV): Objects of this class allow easy handling of comma-separated
     values.nl()  
-    Manpage(cidr)
+    Manpage(csv)
 
     bf(FBB::Indent): Class and manipulators performing text indentation. nl()
     Manpage(indent)
