@@ -41,7 +41,7 @@ tt(std::istream) objects:
     )
     These enumeration values may be combined using the tt(bit-or) operator.
 
-    The bf(enum InserType) specifies how a bf(CSV) is inserted into
+    The bf(enum InsertType) specifies how a bf(CSV) is inserted into
 tt(std::ostream) objects:
     itemization(
     itt(LENGTH) indicates that all specifications (i.e., the em(length) of the
