@@ -24,7 +24,7 @@ template <typename Type>
 bool operator==(Iterator<Type> const &lhs, Iterator<Type> const &rhs);
 
 template <typename Type>
-class Iterator: public std::iterator<std::bidirectional_iterator_tag, Type>
+class Iterator: public std::iterator<std::input_iterator_tag, Type const>
 {
     friend  bool operator==<>(Iterator<Type> const &lhs, 
                             Iterator<Type> const &rhs);
@@ -33,8 +33,6 @@ class Iterator: public std::iterator<std::bidirectional_iterator_tag, Type>
     std::shared_ptr<Type> d_type;
 
     public:
-        typedef Type const &reference;
-
         Iterator() = default;
         explicit Iterator(Type const &value);
     
