@@ -1,3 +1,14 @@
+bobcat (3.22.01)
+
+  * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
+    requiring the definition of some specific macro definitions. These macros
+    are now added where required: to stat/path.cc and signal/verify.cc
+
+  * Iterator's implementation now follows the design described in the C++
+    Annotations
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 03 Mar 2014 21:28:03 +0100
+
 bobcat (3.22.00)
 
   * Added new class CSV, handling comma separated values
